1.20.6機能改修 SSの基礎機能改修（仮） lombok追加 signdefinitionパッケージに看板の依存情報全部移した EmptySignの扱いを元に戻した